added video analys